tests/data/bad/bad_init.py
from ntc import CN

cfg = CN("Bad")
